kaili_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaili-website-deploy
  labels:
    app: kaili-website-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kaili-web
  template:
    metadata:
      labels:
        app: kaili-web
    spec:
      containers:
      - name: kaili
        image: kaili:v0.9.1
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "1Gi"
            cpu: 1
          limits:
            memory: "2Gi"
            cpu: 2
