kaili_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: simple
spec:
  rules:
  - host: localhost.com
    http:
      paths:
      - backend:
          service:
            name: kaili-web-service
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
